Fix overflow issue and add .black-background and anchor styling

--- a/static/css/partials/pages.scss
+++ b/static/css/partials/pages.scss
@@ -1,24 +1,40 @@
 /*        Pages        */
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     background: linear-gradient(35deg, $color-one, $color-two);
     color: #fff;
     font-family: $fonts;
+    overflow-x: hidden;
+    min-height: 100vh;
 }
 
 .container {
-    margin-bottom: 80px;
-    min-height: 100vh;
+    margin-bottom: 45px;
 }
 
 .black-background {
     background-color: rgba(0, 0, 0, 0.05);
-    padding: 5px 20px;
-    border-radius: 10px;
+    padding: 2px 10px;
+    border-radius: 5px;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 a {
     color: #fff;
+    text-decoration: underline;
+}
+
+nav a {
+    text-decoration: none;
 }
 
 .product {
@@ -55,7 +71,7 @@ a {
 }
 
 .typing-height {
-    min-height: 35vh;
+    min-height: 50vh;
     font-weight: 600;
     font-size: 3rem;
     
@@ -64,9 +80,9 @@ a {
     }
 }
 
-.down-icon {
-    margin-top: 33vh;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 8vh;
-}
+// .down-icon {
+//     margin-top: 33vh;
+//     width: 100%;
+//     text-align: center;
+//     margin-bottom: 8vh;
+// }
